<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".presentation.view.activity.MainActivity">

    <EditText
        android:id="@+id/event_name"
        android:hint="@string/event_name"
        android:layout_width="300dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="90dp"
        android:lines="1"
        android:inputType="text"/>

    <EditText
        android:id="@+id/event_description"
        android:hint="@string/event_description"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        app:layout_constraintTop_toBottomOf="@id/event_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="30dp"
        android:lines="1"
        android:inputType="text"/>

    <GridLayout
        android:id="@+id/GridLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/event_description"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:rowCount="4"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal"
        tools:context=".GridXMLActivity"
        tools:ignore="MissingConstraints">

        <Button
            android:id="@+id/btn_check_time"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/GridLayout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginLeft="30dp"
            android:text="@string/check_time"/>

        <AutoCompleteTextView
            android:id="@+id/city"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:hint="@string/city"
            android:inputType="text"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="30dp"/>

        <Button
            android:id="@+id/btn_set_date"
            android:background="@color/black"
            android:textColorHint="@color/black"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginLeft="30dp"
            android:text="@string/set_date"/>

        <Button
            android:id="@+id/btn_set_time"
            android:background="@color/black"
            android:textColorHint="@color/black"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="30dp"
            android:text="@string/set_time"/>
    </GridLayout>

    <Spinner
        android:id="@+id/spinner"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:entries="@array/spinnerItems"
        app:layout_constraintTop_toBottomOf="@id/GridLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="30dp" />

    <EditText
        android:id="@+id/event_url"
        android:hint="@string/event_url"
        android:layout_width="300dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/spinner"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="30dp"
        android:lines="1"
        android:inputType="text"/>

    <Button
        android:id="@+id/btn_save_event"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/event_url"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/save_event"/>

</androidx.constraintlayout.widget.ConstraintLayout>